# a_maze_ing

./: ANALYSIS.md  CORRECTIONS.md  Makefile  README.md  README_mazegen.md  a_maze_ing.py  config.txt  display_maze.py  maze.txt  maze_generator.py  maze_menu.py  mazegen-1.0.0-py3-none-any.whl  menu.py  output_writer.py  pyproject.toml  requirements.txt
core/: __init__.py  maze_gen.py
mazegen/: __init__.py  maze_generator.py
visual/: __init__.py  animation.py  colors.py  config.py  display.py  logo.py  terminal.py
